version/0.22/_sources/api/solver/_autosummary/settings/principal_axes_values.rst.txt
:orphan:

.. _principal_axes_values:

principal_axes_values
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.principal_axes_values.principal_axes_values
    :show-inheritance:

.. rubric:: Attributes

==========================================   ======================

Attribute                                                   Summary

==========================================   ======================
:ref:`principal_axes <principal_axes>`              Specify matrix.

:ref:`principal_values <principal_values>`       Specify direction.

:ref:`conductivity <conductivity>`               Property settings.

==========================================   ======================

.. rubric:: Included in:

====================================================   ============================================================

Parent                                                                                                      Summary

====================================================   ============================================================
:ref:`thermal_conductivity <thermal_conductivity_2>`       Thermal-conductivity property setting for this material.

====================================================   ============================================================

