version/0.27/_sources/api/solver/_autosummary/settings/principal_axes_values.rst.txt
:orphan:

.. _principal_axes_values:

principal_axes_values
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.principal_axes_values
    :show-inheritance:

.. rubric:: Attributes

==========================================   ===================================================

Attribute                                                                                Summary

==========================================   ===================================================
:ref:`principal_axes <principal_axes>`           Specify anisotropic property matrix components.

:ref:`principal_values <principal_values>`              Specify orthotropic property directions.

:ref:`conductivity <conductivity>`                                            Property settings.

==========================================   ===================================================

.. rubric:: Included in:

======================================================   ================================================

Parent                                                                                            Summary

======================================================   ================================================
:ref:`thermal_conductivity_2 <thermal_conductivity_2>`       Set material property: thermal-conductivity.

======================================================   ================================================

